# university

./: LICENSE  README.md
_Algorithms/: sqeq.cpp
_Algotester/: 47sequence.cpp  acm_radio.cpp  all_ukrainian_olympiad.cpp  apples.cpp  bigdin.cpp  bull.cpp  cake.cpp  candies.cpp  cheerleaders.cpp  constellations.cpp  country_distribution.cpp  dep_krav.cpp  dragon.cpp  dragon_count.cpp  dzidzo_and_his_song.cpp  evening.cpp  football.cpp  geometry.cpp  grass.cpp  icpc2022_1f.cpp  icpc2022_1g.cpp  icpc2022_2b.cpp  kth_sum.cpp  kv_labyrinth.cpp  lemurs.cpp  lines.cpp  musician.cpp  new_year_2019.cpp  olympia.cpp  painting.cpp  password_for_marichka.cpp  polygon.cpp  rectangular_country_map.cpp  robot.cpp  santa_claus_car.cpp  skier.cpp  snotriare.cpp  squirrel_on_tree.cpp  stars_from_sky.cpp  sum.cpp  (+8 more)
_CHMLA/: LU_decomposition.py  PM_max_eigenvalue.py  gaussian_elimination.py  seidel_method.py  tridiagonal_matrix_algorithm.py
_DVVS/: new.txt  recover.cpp
_OOP/: birds.cpp  complex.cpp  employee.cpp  people.cpp  person.cpp  person.h  person_list.cpp  rectangle.cpp  rectangle.h  rectangle_square.cpp
_Practise/: 2fact.cpp  task1_5.py  task2_5.py  task3_a.py  task3_b.py  task4_5.py  task5_5.py  (+7 more)
_Practise/year2/task1-5/shipping_logic/: CMakeLists.txt  main.cpp
_Practise/year2/task1-5/shipping_logic/logistics/: shipping.hpp  shipping_list.hpp
_Practise/year2/task1-5/shipping_logic/logistics/shipping_members/: driver.hpp  goods.hpp  shipping_member.hpp  warehouse.hpp
_Practise/year2/task1-5/shipping_logic/logistics/transport_types/: plane.hpp  train.hpp  truck.hpp
(+161 files in other folders)
